@@ -80,8 +80,3 @@ $Id$
   point for an implementation.
 
 
-* TCP wrappers support
-
-  This is easy to do and may be helpful for some users.
-
-
