@@ -12,7 +12,7 @@ dnl
 AC_INIT(auth_mysql.c)
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(configuration.h)
-AM_INIT_AUTOMAKE(tpop3d, "1.3.5pre2")
+AM_INIT_AUTOMAKE(tpop3d, "1.3.5pre3")
 
 AC_DEFINE_UNQUOTED(TPOP3D_VERSION, "$VERSION", [The tpop3d version number])
 
@@ -160,6 +160,13 @@ AC_ARG_ENABLE(snide-comments,
     [enable_snide=$enableval],
     [enable_snide="yes"])
 
+dnl Give the option of using libwrap for TCP wrappers.
+AC_ARG_ENABLE(tcp-wrappers,
+        [  --enable-tcp-wrappers               Enable hosts.allow-style access control
+                                      using TCP Wrappers [default=no]],
+    [enable_tcp_wrappers=$enableval],
+    [enable_tcp_wrappers="no"])
+
 dnl Some options mainly useful for development/debugging.
 
 dnl Note the ugliness I've used to put a note in the output of
@@ -272,6 +279,11 @@ then
     AC_DEFINE(NO_SNIDE_COMMENTS,1,[Turns off responses to which some people object.])
 fi
 
+if test x"$enable_tcp_wrappers" = x"yes"
+then
+    AC_DEFINE(USE_TCP_WRAPPERS,1,[Enables TCP Wrappers for host-based access control.])
+fi
+
 if test x"$enable_backtrace" = x"yes"
 then
     AC_DEFINE(APPALLING_BACKTRACE_HACK,1,[Produce a backtrace if the program crashes.])
@@ -324,11 +336,16 @@ then
     AC_CHECK_LIB(mysqlclient, main, [], AC_MSG_ERROR([[vmail-sql authentication enabled, but can't find libmysqlclient]]) )
 fi
 
+if test x"$enable_tcp_wrappers" = x"yes"
+then
+    AC_CHECK_LIB(wrap, main, [], AC_MSG_ERROR([[TCP Wrappers support enabled, but can't find libwrap]]) )
+fi
+
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 
-AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/time.h syslog.h unistd.h crypt.h execinfo.h security/pam_appl.h mysql.h)
+AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/time.h syslog.h unistd.h crypt.h execinfo.h security/pam_appl.h mysql.h tcpd.h)
 
 if test x"$enable_backtrace" = x"yes"
 then
@@ -383,6 +400,14 @@ then
         AC_MSG_ERROR( [fcntl needed but can't find unistd.h] )
     fi
 
+fi
+
+if test x"$enable_tcp_wrappers" = x"yes"
+then
+    if test x"$ac_cv_header_tcpd_h" != x"yes"
+    then
+        AC_MSG_ERROR( [TCP Wrappers enabled but can't find tcpd.h] )
+    fi
 fi
 
 dnl Checks for typedefs, structures, and compiler characteristics.
