@@ -3,10 +3,9 @@
 #
 
 #listen-address: 127.0.0.1:pop-3 pop3.example.com 
-#listen-address: 0.0.0.0 0.0.0.0:9000
-listen-address: 1.2.3.4:9000
+listen-address: 0.0.0.0 0.0.0.0:9000
 
-max-children:           1
+max-children:           16
 
 mailbox:                maildir:$(home)/Maildir /var/spool/mail/$(user)
 #mailspool-index:        /tmp/$(escaped_name).tpop3d-index
@@ -35,8 +34,8 @@ auth-mysql-database:    vmail
 auth-mysql-username:    vmail
 auth-mysql-password:    moocow
 #auth-mysql-user-query: select '/tmp/test-mailspool', '{plaintext}moocow', 'chris', 'mailspool'
-auth-mysql-pass-query:                              \
-    select '/tmp/test-mailspool',                   \
-           concat('{plaintext}', '$(local_part)'),  \
-           'chris',                                 \
-           'mailspool'
+#auth-mysql-pass-query:                              \
+#    select '/tmp/test-mailspool',                   \
+#           concat('{plaintext}', '$(local_part)'),  \
+#           'chris',                                 \
+#           'mailspool'
