@@ -14,6 +14,8 @@ Facility for specifying the SQL queries used by auth-mysql at runtime was
 added, thanks to Mike Bremford. In addition, it is now possible to specify the
 types of mailboxes used by auth-mysql.
 
+Support for TCP Wrappers was added.
+
 1.3.4
 
 Minor changes, and addition of metadata caching for BSD mailspools; in
